# placebo-template

./: Cargo.toml  memory.x  readme.md
.cargo/: config  config.toml
src/: main.rs  shell.rs
