[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "1.0.0"
panic-halt = "0.2.0"
ushell = "0.3.5"
stm32g0xx-hal = { git="https://github.com/stm32-rs/stm32g0xx-hal.git", features = ["rt", "stm32g031"] }
btoi = { version = "0.4.2", default-features = false }

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"