[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-halt = "0.2.0"
stm32g0xx-hal = { git="https://github.com/stm32-rs/stm32g0xx-hal.git", features = ["rt", "stm32g031"] }

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
