[package]
name = "{{project-name}}"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.0"

[dependencies]
btoi = { version = "0.4.2", default-features = false }
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-halt = "0.2.0"
stm32g0xx-hal = { version="0.2.0", features = ["rt", "stm32g031"] }
ushell = "0.3.5"

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"